2015-12-15  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Fully implement vertex data, including colour coding support
	and multicolumn text data files.

2015-11-10  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c, slice_window/colour_coding.c,	Include/global_variables.h:
	Update the way we implement the initial colour range options.
   * Documentation/Display.tex, Documentation/globals.tex: Document
	these changes.

2015-11-06  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c: Save/load oblique slice settings.

2015-10-08  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/colour_coding.c: Slight tweak to the initial colour
	range to better handle BigBrain images.

2015-09-25  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c, input_files/vertex_data.c, main/graphics.c,
	main/three_d.c, menu/input_menu.c, menu/Display.menu.include:
	Support the loading and display of per-vertex (e.g. cortical
	thickness) data for surface polygon objects.

2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/undo.c, etc.: Implement N-level undo during
	painting.

2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/colour_coding.c, slice_window/draw_slice.c: Avoid
	creating or using unreasonably large or small colour tables.
	Instead, use the color_coding_struct object directly by
	calling the new bicpl API "create_volume_slice_coding()".
	Requires bicpl version >= 1.4.70.

2015-09-17  Robert D. Vincent <robert.d.vincent@mcgill.ca
   * cursor_contours/contours.c: Did some refactoring, which should
	have little visible impact.

2015-09-09  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c - Force slice cursor and 3D cursor to be consistent
	during initialization. This corrects a bug where the two values
	are initialized independently and could be quite different if the
	extent of the loaded 3D objects was much greater than the extent of